--- a/index.html
+++ b/index.html
@@ -3,16 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flexbox Bild</title>
+    <title>Masterarbeit Umfrage</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="flex-container">
-        <div class="flex-item">
-            <img src="https://s20.directupload.net/images/240826/aih3kupq.png" alt="Bild 1">
-            <p>Durchschnittliche Rücklaufquote bei Online-Umfragen: 29%</p>
-            <button>Ich will sofort helfen!</button>
-        </div>
+    <div class="scroll-container">
+        <!-- Querformat Bild -->
+        <section class="scroll-section">
+            <a href="https://example.com/link1">
+                <img src="https://s20.directupload.net/images/240826/aih3kupq.png" alt="Querformat Bild 1" class="quer">
+            </a>
+        </section>
+        <!-- Hochformat Bild -->
+        <section class="scroll-section">
+            <a href="https://example.com/link1-portrait">
+                <img src="hochformat-bild1.jpg" alt="Hochformat Bild 1" class="hochkant">
+            </a>
+        </section>
+        <!-- Querformat Bild -->
+        <section class="scroll-section">
+            <a href="https://example.com/link2">
+                <img src="https://s20.directupload.net/images/240826/ww229495.png" alt="Querformat Bild 2" class="quer">
+            </a>
+        </section>
+        <!-- Hochformat Bild -->
+        <section class="scroll-section">
+            <a href="https://example.com/link2-portrait">
+                <img src="hochformat-bild2.jpg" alt="Hochformat Bild 2" class="hochkant">
+            </a>
+        </section>
+        <!-- Querformat Bild -->
+        <section class="scroll-section">
+            <a href="https://example.com/link3">
+                <img src="https://s20.directupload.net/images/240826/sq4cmdsh.png" alt="Querformat Bild 3" class="quer">
+            </a>
+        </section>
+        <!-- Hochformat Bild -->
+        <section class="scroll-section">
+            <a href="https://example.com/link3-portrait">
+                <img src="hochformat-bild3.jpg" alt="Hochformat Bild 3" class="hochkant">
+            </a>
+        </section>
     </div>
 </body>
 </html>
