--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- Hochformat Bild -->
         <section class="scroll-section">
             <a href="https://example.com/link1-portrait">
-                <img src="hochformat-bild1.jpg" alt="Hochformat Bild 1" class="hochkant">
+                <img src="https://s20.directupload.net/images/240826/bq9mbx2i.png" alt="Hochformat Bild 1" class="hochkant">
             </a>
         </section>
         <!-- Querformat Bild -->
