--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- Hochformat Bild -->
         <section class="scroll-section">
             <a href="https://example.com/link2-portrait">
-                <img src="hochformat-bild2.jpg" alt="Hochformat Bild 2" class="hochkant">
+                <img src="https://s20.directupload.net/images/240826/e2wutmki.png" class="hochkant">
             </a>
         </section>
         <!-- Querformat Bild -->
