--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!-- Hochformat Bild -->
         <section class="scroll-section">
             <a href="https://example.com/link3-portrait">
-                <img src="hochformat-bild3.jpg" alt="Hochformat Bild 3" class="hochkant">
+                <img src="https://s20.directupload.net/images/240826/ezn2d5xh.png" alt="Hochformat Bild 3" class="hochkant">
             </a>
         </section>
     </div>
