--- a/index.html
+++ b/index.html
@@ -8,42 +8,37 @@
 </head>
 <body>
     <div class="scroll-container">
-        <!-- Querformat Bild -->
-        <section class="scroll-section">
+        <section class="scroll-section quer">
             <a href="https://example.com/link1">
-                <img src="https://s20.directupload.net/images/240826/aih3kupq.png" alt="Querformat Bild 1" class="quer">
+                <img src="https://s20.directupload.net/images/240826/aih3kupq.png" alt="Querformat Bild 1">
             </a>
         </section>
-        <!-- Hochformat Bild -->
-        <section class="scroll-section">
+        <section class="scroll-section hochkant">
             <a href="https://example.com/link1-portrait">
-                <img src="https://s20.directupload.net/images/240826/bq9mbx2i.png" alt="Hochformat Bild 1" class="hochkant">
+                <img src="https://s20.directupload.net/images/240826/bq9mbx2i.png" alt="Hochformat Bild 1">
             </a>
         </section>
-        <!-- Querformat Bild -->
-        <section class="scroll-section">
+        <section class="scroll-section quer">
             <a href="https://example.com/link2">
-                <img src="https://s20.directupload.net/images/240826/ww229495.png" alt="Querformat Bild 2" class="quer">
+                <img src="https://s20.directupload.net/images/240826/ww229495.png" alt="Querformat Bild 2">
             </a>
         </section>
-        <!-- Hochformat Bild -->
-        <section class="scroll-section">
+        <section class="scroll-section hochkant">
             <a href="https://example.com/link2-portrait">
-                <img src="https://s20.directupload.net/images/240826/e2wutmki.png" class="hochkant">
+                <img src="https://s20.directupload.net/images/240826/e2wutmki.png" alt="Hochformat Bild 2">
             </a>
         </section>
-        <!-- Querformat Bild -->
-        <section class="scroll-section">
+        <section class="scroll-section quer">
             <a href="https://example.com/link3">
-                <img src="https://s20.directupload.net/images/240826/sq4cmdsh.png" alt="Querformat Bild 3" class="quer">
+                <img src="https://s20.directupload.net/images/240826/sq4cmdsh.png" alt="Querformat Bild 3">
             </a>
         </section>
-        <!-- Hochformat Bild -->
-        <section class="scroll-section">
+        <section class="scroll-section hochkant">
             <a href="https://example.com/link3-portrait">
-                <img src="https://s20.directupload.net/images/240826/ezn2d5xh.png" alt="Hochformat Bild 3" class="hochkant">
+                <img src="https://s20.directupload.net/images/240826/ezn2d5xh.png" alt="Hochformat Bild 3">
             </a>
         </section>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
