--- a/index.html
+++ b/index.html
@@ -22,25 +22,27 @@
             </div>
         </div>
     </section>
+
     <section class="scroll-section hochkant">
-        <div class="container">
-            <div class="images">
-                <a href="https://example.com/link1-portrait">
-                    <img src="https://s20.directupload.net/images/240829/us6fnjlc.png" alt="Hochformat Bild 1">
+        <div class="images-progress">
+            <div>
+                <a href="https://example.com/link3-portrait">
+                    <img src="https://s20.directupload.net/images/240829/us6fnjlc.png" alt="Hochformat Bild 3">
                 </a>
             </div>
-            <div class="arrow">
+            <div class="arrow-animation">
                 <a href="#section2-mobile">
                     <img src="images/lila_haken.png">
                 </a>
             </div>
         </div>
     </section>
+
     <section class="scroll-section quer" id="section2">
         <div class="container">
             <div class="images">
                 <a href="https://example.com/link2">
-                    <img src="https://s20.directupload.net/images/240829/hkyb4dm5.png" alt="Querformat Bild 2">
+                    <img src="https://s20.directupload.net/images/240829/pj6zocty.png" alt="Querformat Bild 2">
                 </a>
             </div>
             <div class="arrow" onclick="ani()">
@@ -51,16 +53,16 @@
         </div>
     </section>
     <section class="scroll-section hochkant" id="section2-mobile">
-        <div class="container">
-            <div class="images">
-                <a href="https://example.com/link2-portrait">
-                    <img src="https://s20.directupload.net/images/240829/pj6zocty.png" alt="Hochformat Bild 2">
+        <div class="images-progress">
+            <div>
+                <a href="https://example.com/link3-portrait">
+                    <img src="https://s20.directupload.net/images/240829/pj6zocty.png" alt="Hochformat Bild 3">
                 </a>
-                <div class="arrow" onclick="aniMobile()">
-                    <a href="#section3-mobile">
-                        <img src="images/gruner_haken.png">
-                    </a>
-                </div>
+            </div>
+            <div class="arrow-animation">
+                <a href="#section2-mobile">
+                    <img src="images/gruner_haken.png">
+                </a>
             </div>
         </div>
     </section>
