--- a/index.html
+++ b/index.html
@@ -8,31 +8,19 @@
 </head>
 <body>
 <div class="scroll-container">
+
+
+<!--    Desktop-->
     <section class="scroll-section quer">
         <div class="container">
-            <div class="images">
+            <div class="images-progress">
                 <a href="https://masterfrage.info">
-                    <img src="https://s20.directupload.net/images/240829/n3n698k8.png" alt="Querformat Bild 1">
+                    <img class="image-site" src="https://s20.directupload.net/images/240829/n3n698k8.png" alt="Querformat Bild 1">
                 </a>
             </div>
             <div class="arrow">
                 <a href="#section2">
-                    <img src="images/lila_haken.png">
-                </a>
-            </div>
-        </div>
-    </section>
-
-    <section class="scroll-section hochkant">
-        <div class="images-progress">
-            <div>
-                <a href="https://example.com/link3-portrait">
-                    <img src="https://s20.directupload.net/images/240829/us6fnjlc.png" alt="Hochformat Bild 3">
-                </a>
-            </div>
-            <div class="arrow-animation">
-                <a href="#section2-mobile">
-                    <img src="images/lila_haken.png">
+                    <img class="image-arrow" src="images/lila_haken.png">
                 </a>
             </div>
         </div>
@@ -40,28 +28,14 @@
 
     <section class="scroll-section quer" id="section2">
         <div class="container">
-            <div class="images">
+            <div class="images-progress">
                 <a href="https://example.com/link2">
-                    <img src="https://s20.directupload.net/images/240829/pj6zocty.png" alt="Querformat Bild 2">
+                    <img class="image-site" src="https://s20.directupload.net/images/240829/hkyb4dm5.png" alt="Querformat Bild 2">
                 </a>
             </div>
-            <div class="arrow" onclick="ani()">
+            <div class="arrow">
                 <a href="#section3">
-                    <img src="images/gruner_haken.png">
-                </a>
-            </div>
-        </div>
-    </section>
-    <section class="scroll-section hochkant" id="section2-mobile">
-        <div class="images-progress">
-            <div>
-                <a href="https://example.com/link3-portrait">
-                    <img src="https://s20.directupload.net/images/240829/pj6zocty.png" alt="Hochformat Bild 3">
-                </a>
-            </div>
-            <div class="arrow-animation">
-                <a href="#section2-mobile">
-                    <img src="images/gruner_haken.png">
+                    <img  class="image-arrow" src="images/gruner_haken.png">
                 </a>
             </div>
         </div>
@@ -72,14 +46,13 @@
             <div class="images-progress">
                 <div>
                     <a href="https://example.com/link3-portrait">
-                        <img src="https://s20.directupload.net/images/240829/r8ewicg5.png" alt="Querformat Bild 3">
+                        <img class="image-site" src="https://s20.directupload.net/images/240829/r8ewicg5.png" alt="Querformat Bild 3">
                     </a>
                 </div>
                 <div class="progress">
                     <a href="https://example.com/link3-portrait">
                         <svg height="50%" viewBox="0 0 56 18">
-<!--                            Zeile 80 die Zahl im text Tag-->
-                            <text class="svg-text" x="5" y="15">90%</text>
+                           <text class="svg-text" x="5" y="15">90%</text> <!-- Prozentwert hier austauschen-->
                         </svg>
                     </a>
                 </div>
@@ -88,19 +61,50 @@
     </section>
 
 
+    <!--    Mobile-->
+    <section class="scroll-section hochkant">
+        <div class="images-progress">
+            <div>
+                <a href="https://example.com/link3-portrait">
+                    <img class="image-site" src="https://s20.directupload.net/images/240829/us6fnjlc.png" alt="Hochformat Bild 3">
+                </a>
+            </div>
+            <div class="arrow-animation">
+                <a href="#section2-mobile">
+                    <img class="image-arrow-mobile" src="images/lila_haken.png">
+                </a>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="scroll-section hochkant" id="section2-mobile">
+        <div class="images-progress">
+            <div>
+                <a href="https://example.com/link3-portrait">
+                    <img class="image-site" src="https://s20.directupload.net/images/240829/pj6zocty.png" alt="Hochformat Bild 3">
+                </a>
+            </div>
+            <div class="arrow-animation">
+                <a href="#section3-mobile">
+                    <img class="image-arrow-mobile" src="images/gruner_haken.png">
+                </a>
+            </div>
+        </div>
+    </section>
+
     <section class="scroll-section hochkant" id="section3-mobile">
         <div class="container">
             <div class="images-progress">
                 <div>
                     <a href="https://example.com/link3-portrait">
-                        <img src="https://s20.directupload.net/images/240829/wmgv5bki.png" alt="Hochformat Bild 3">
+                        <img class="image-site" src="https://s20.directupload.net/images/240829/wmgv5bki.png" alt="Hochformat Bild 3">
                     </a>
                 </div>
                 <div class="progress-mobile">
                     <a href="https://example.com/link3-portrait">
                         <svg height="50%" viewBox="0 0 56 18">
-                            <!-- Zeile 101 die Zahl im text Tag-->
-                            <text class="svg-text" x="5" y="15">90%</text>
+                            <text class="svg-text" x="5" y="15">90%</text> <!-- Prozentwert hier austauschen-->
                         </svg>
                     </a>
                 </div>
