--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <section class="scroll-section hochkant">
         <div class="images-progress">
             <div>
-                <a href="https://example.com/link3-portrait">
+                <a href="https://www.soscisurvey.de/Nachhaltigkeit_Selbstbeurteilung/">
                     <img class="image-site" src="https://s20.directupload.net/images/240829/us6fnjlc.png" alt="Hochformat Bild 3">
                 </a>
             </div>
@@ -81,7 +81,7 @@
     <section class="scroll-section hochkant" id="section2-mobile">
         <div class="images-progress">
             <div>
-                <a href="https://example.com/link3-portrait">
+                <a href="https://www.soscisurvey.de/Nachhaltigkeit_Selbstbeurteilung/">
                     <img class="image-site" src="https://s20.directupload.net/images/240829/pj6zocty.png" alt="Hochformat Bild 3">
                 </a>
             </div>
@@ -97,12 +97,12 @@
         <div class="container">
             <div class="images-progress">
                 <div>
-                    <a href="https://example.com/link3-portrait">
+                    <a href="https://www.soscisurvey.de/Nachhaltigkeit_Selbstbeurteilung/">
                         <img class="image-site" src="https://s20.directupload.net/images/240829/wmgv5bki.png" alt="Hochformat Bild 3">
                     </a>
                 </div>
                 <div class="progress-mobile">
-                    <a href="https://example.com/link3-portrait">
+                    <a href="https://www.soscisurvey.de/Nachhaltigkeit_Selbstbeurteilung/">
                         <svg height="50%" viewBox="0 0 56 18">
                             <text class="svg-text" x="5" y="15">10%</text> <!-- Prozentwert hier austauschen-->
                         </svg>
