--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="scroll-section quer" id="section2">
         <div class="container">
             <div class="images-progress">
-                <a href="https://example.com/link2">
+                <a href="https://www.soscisurvey.de/Nachhaltigkeit_Selbstbeurteilung/">
                     <img class="image-site" src="https://s20.directupload.net/images/240829/hkyb4dm5.png" alt="Querformat Bild 2">
                 </a>
             </div>
@@ -45,12 +45,12 @@
         <div class="container">
             <div class="images-progress">
                 <div>
-                    <a href="https://example.com/link3-portrait">
+                    <a href="https://www.soscisurvey.de/Nachhaltigkeit_Selbstbeurteilung/">
                         <img class="image-site" src="https://s20.directupload.net/images/240829/r8ewicg5.png" alt="Querformat Bild 3">
                     </a>
                 </div>
                 <div class="progress">
-                    <a href="https://example.com/link3-portrait">
+                    <a href="https://www.soscisurvey.de/Nachhaltigkeit_Selbstbeurteilung/">
                         <svg height="50%" viewBox="0 0 56 18">
                            <text class="svg-text" x="5" y="15">10%</text> <!-- Prozentwert hier austauschen-->
                         </svg>
