--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="scroll-section quer">
         <div class="container">
             <div class="images-progress">
-                <a href="https://masterfrage.info">
+                <a href="https://www.soscisurvey.de/Nachhaltigkeit_Selbstbeurteilung/">
                     <img class="image-site" src="https://s20.directupload.net/images/240829/n3n698k8.png" alt="Querformat Bild 1">
                 </a>
             </div>
